updated upgrade guides

--- a/docs/developer/contributing/creating-an-extension.mdx
+++ b/docs/developer/contributing/creating-an-extension.mdx
@@ -31,7 +31,7 @@ cd spree_simple_sales
 
 ## Adding a Sale Price to Variants
 
-The first thing we need to do is create a migration that adds a sale\_price column to [variants](/developer/core-concepts/products#variants).
+The first thing we need to do is create a migration that adds a sale_price column to [variants](/developer/core-concepts/products#variants).
 
 We can do this with the following command:
 
@@ -78,7 +78,7 @@ bundle exec rails g spree_simple_sales:install
 
 Now we need to extend `Spree::HomeController` and add an action that selects "on sale" products.
 
- Note for the sake of this example that \`Spree::HomeController\` is only included in spree\_frontend so you need to make it a dependency on your extensions \*.gemspec file.
+ Note for the sake of this example that \`Spree::HomeController\` is only included in spree_frontend so you need to make it a dependency on your extensions \*.gemspec file.
 
 Make sure you are in the `spree_simple_sales` root directory and run the following command to create the directory structure for our controller decorator:
 
