--- a/docs/developer/customization/logic.mdx
+++ b/docs/developer/customization/logic.mdx
@@ -14,7 +14,7 @@ It is highly recommended to use [Dependencies](dependencies) and [Extensions](..
 
 All of Spree's business logic \(models, controllers, helpers, etc\) can easily be extended or overridden to meet your exact requirements using standard Ruby idioms.
 
-Standard practice for including such changes in your application or extension is to create a file within the relevant **app/models/spree** or **app/controllers/spree** directory with the original class name with **\_decorator** appended.
+Standard practice for including such changes in your application or extension is to create a file within the relevant **app/models/spree** or **app/controllers/spree** directory with the original class name with **_decorator** appended.
 
 ## Extending Models
 
