--- a/docs/developer/customization/preferences.mdx
+++ b/docs/developer/customization/preferences.mdx
@@ -276,8 +276,8 @@ end
 In the above configuration file, three preferences have been defined:
 
 * theme
-* show\_splash\_page
-* number\_of\_articles
+* show_splash_page
+* number_of_articles
 
 It is recommended to create the configuration file in the `lib/` directory.
 
