--- a/docs/developer/customization/storefront.mdx
+++ b/docs/developer/customization/storefront.mdx
@@ -419,7 +419,7 @@ This same method can be used to override JavaScript files provided by third-part
 
 ### Sitemap
 
-We highly recommend adding a sitemap to your site. It might affect how Google bot crawls your store pages. There is an official extension called [Spree Sitemap](https://github.com/spree-contrib/spree\_sitemap) for that exact purpose.
+We highly recommend adding a sitemap to your site. It might affect how Google bot crawls your store pages. There is an official extension called [Spree Sitemap](https://github.com/spree-contrib/spree_sitemap) for that exact purpose.
 
 1. Per region, language or currency
 2. Click the **Edit** button (indicated with a pencil icon) for the right store
