--- a/docs/developer/getting-started/quickstart.mdx
+++ b/docs/developer/getting-started/quickstart.mdx
@@ -81,7 +81,7 @@ Feel free to explore your store. You can do so because Spree comes with a defaul
 
     Upon successful authentication, you should see the admin screen:
 
-    ![](/images/admin\_panel\_978-2x.jpg)
+    ![](/images/admin_panel_978-2x.jpg)
 
     Feel free to explore some of the Admin Panel features that Spree has to offer and to verify that your installation is working properly.
   </Accordion>
