--- a/docs/developer/security/authentication_and_authorization.mdx
+++ b/docs/developer/security/authentication_and_authorization.mdx
@@ -6,7 +6,7 @@ order: 2
 
 # Authentication & authorization
 
-If you install spree\_auth\_devise when setting up your app, we use a third party authentication library for Ruby known as [Devise](https://github.com/plataformatec/devise). This library provides a host of useful functionality that is in turn available to Spree, including the following features:
+If you install spree_auth_devise when setting up your app, we use a third party authentication library for Ruby known as [Devise](https://github.com/plataformatec/devise). This library provides a host of useful functionality that is in turn available to Spree, including the following features:
 
 * Authentication
 * Strong password encryption \(with the ability to specify your own algorithms\)
@@ -16,7 +16,7 @@ If you install spree\_auth\_devise when setting up your app, we use a third part
 
 ## Devise Configuration
 
- A default Spree install comes with the \[Spree Auth Devise\]\(https://github.com/spree/spree\_auth\_devise\) gem, which provides authentication for Spree using Devise. This section of the guide covers the default setup. If you're using your own authentication, please consult the manual for that authentication engine.
+ A default Spree install comes with the \[Spree Auth Devise\]\(https://github.com/spree/spree_auth_devise\) gem, which provides authentication for Spree using Devise. This section of the guide covers the default setup. If you're using your own authentication, please consult the manual for that authentication engine.
 
 We have configured Devise to handle only what is needed to authenticate with a Spree site. The following details cover the default configurations:
 
