--- a/docs/developer/upgrades/3.6-to-3.7.mdx
+++ b/docs/developer/upgrades/3.6-to-3.7.mdx
@@ -5,15 +5,13 @@ order: 3
 description: 'This guide covers upgrading a 3.6 Spree application, to version 3.7.'
 ---
 
-## Update Gemfile
+## Update gems
 
-```ruby
-gem 'spree', '~> 3.7'
-gem 'spree_auth_devise', '~> 3.5'
-gem 'spree_gateway', '~> 3.4'
+Run
+
+```bash
+bundle update
 ```
-
-## Run `bundle update`
 
 ## Install missing migrations
 
