--- a/docs/developer/upgrades/4.0-to-4.1.mdx
+++ b/docs/developer/upgrades/4.0-to-4.1.mdx
@@ -13,14 +13,13 @@ If you're on an older version than 4.0 please follow previous upgrade guides and
 3. [upgrade 3.7 to 4.0](3.7-to-4.0)
 </Note>
 
-## Update Gemfile
+## Update gems
 
-```ruby
-gem 'spree', '~> 4.1'
-gem 'spree_gateway', '~> 3.9'
+Run the following command to update your gems to 4.1:
+
+```bash
+bundle update
 ```
-
-## Run `bundle update`
 
 ## Install missing migrations
 
@@ -34,7 +33,7 @@ rake railties:install:migrations
 rails db:migrate
 ```
 
-## Decide what to do next
+## Storefront upgrade
 
 You have two options:
 
@@ -47,13 +46,7 @@ Spree 4.1 comes with a completely new mobile-first ultra-fast Storefront powered
 
 To replace your current frontend with the new Spree UI follow these steps:
 
-1. Update Spree Auth Devise to 4.1 in your `Gemfile`
-
-   ```ruby
-    gem 'spree_auth_devise', '~> 4.1'
-   ```
-
-2. In your project root directory run:
+1. In your project root directory run:
 
    ```bash
     rails g spree:frontend:copy_storefront
@@ -62,8 +55,8 @@ To replace your current frontend with the new Spree UI follow these steps:
    **WARNING** this will overwrite your current project templates, it's required for the new UI, so if you'll be asked by the generator what to do please choose **A** to proceed
 
 3. Next, you will need to copy over two files:
-   * [spree\_storefront.rb](https://raw.githubusercontent.com/spree/spree/master/core/lib/generators/spree/install/templates/config/initializers/spree_storefront.rb) to `config/initializers/spree_storefront.rb`
-   * [spree\_storefront.yml](https://raw.githubusercontent.com/spree/spree/master/core/lib/generators/spree/install/templates/config/spree_storefront.yml) to `config/spree_storefront.yml`
+   * [spree_storefront.rb](https://raw.githubusercontent.com/spree/spree/master/core/lib/generators/spree/install/templates/config/initializers/spree_storefront.rb) to `config/initializers/spree_storefront.rb`
+   * [spree_storefront.yml](https://raw.githubusercontent.com/spree/spree/master/core/lib/generators/spree/install/templates/config/spree_storefront.yml) to `config/spree_storefront.yml`
 4. If you overwrote any `spree_frontend` [controllers](https://github.com/spree/spree/tree/master/frontend/app/controllers) you will need to either remove your local copies or move your custom logic to [decorators](/developer/customization#extending-controllers)
 5. The same goes for [helpers](https://github.com/spree/spree/tree/master/frontend/app/helpers/spree)
 6. You will also need to remove this line:
@@ -78,27 +71,19 @@ To replace your current frontend with the new Spree UI follow these steps:
 
 If you wish to not move to the new Storefront UI it's still an option. Just proceed with the steps described below.
 
-1. Keep Spree Auth Devise at the version you're currently using
-
-   If you're using Spree Auth Devise gem you need to lock it at 4.0.0 in your `Gemfile`:
-
-   ```ruby
-    gem 'spree_auth_devise', '~> 4.0'
-   ```
-
-2. Copy over all views from Spree 4.0
+1. Copy over all views from Spree 4.0
 
    Copy overviews from: [https://github.com/spree/spree/tree/4-0-stable/frontend/app/views](https://github.com/spree/spree/tree/4-0-stable/frontend/app/views) to your application views directory: `app/views`
 
    **WARNING** remember to not overwrite your customizations!
 
-3. Copy over all Stylesheets from Spree 4.0
+2. Copy over all Stylesheets from Spree 4.0
 
    Copy over stylesheets from: [https://github.com/spree/spree/tree/4-0-stable/frontend/app/assets/stylesheets](https://github.com/spree/spree/tree/4-0-stable/frontend/app/assets/stylesheets) to `app/stylesheets`
 
    **WARNING** remember to not overwrite your customizations!
 
-4. Copy over all JavaScript from Spree 4.0
+3. Copy over all JavaScript from Spree 4.0
 
    Copy over stylesheets from: [https://github.com/spree/spree/tree/4-0-stable/frontend/app/assets/javascripts](https://github.com/spree/spree/tree/4-0-stable/frontend/app/assets/javascripts) to `app/javascripts`
 
