--- a/docs/developer/upgrades/3.0-to-3.1.mdx
+++ b/docs/developer/upgrades/3.0-to-3.1.mdx
@@ -5,23 +5,11 @@ order: 9
 description: 'This guide covers upgrading a 3.0 Spree store, to a 3.1 store'
 ---
 
-## Upgrade Rails
+## Update gems
 
-For this Spree release, you will need to upgrade your Rails version to at least 4.2.6.
-
-```ruby
-gem 'rails', '~> 4.2.6'
+```bash
+bundle update
 ```
-
-## Upgrade Spree
-
-For best results, use the spree gem in version 3.1:
-
-```ruby
-gem 'spree', '~> 3.1'
-```
-
-Run `bundle update spree`.
 
 ## Copy and run migrations
 
@@ -31,23 +19,6 @@ Copy over the migrations from Spree \(and any other engine\) and run them using 
 rake railties:install:migrations
 rake db:migrate
 ```
-
-## Spree Auth Devise & Spree Gateway
-
-If you are using Spree Gateway and/or Spree Auth Devise you should also upgrade them:
-
-```ruby
-gem 'spree_auth_devise', '~> 3.1'
-gem 'spree_gateway', '~> 3.1'
-```
-
-For Spree Auth Devise run installer:
-
-```bash
-rails g spree:auth:install
-```
-
-\(you don't have to override config/initializers/devise.rb\)
 
 ## Additional information
 
@@ -67,9 +38,9 @@ Becomes:
 extends 'spree/api/v1/zones/show'
 ```
 
-### Remove Spree::Config.check\_for\_spree\_alerts
+### Remove `Spree::Config.check_for_spree_alerts`
 
-If you were disabling the alert checks you'll now want to remove this preference as it's no longer used.
+If you were disabling the alert checks you'll now want to remove this preference from `config/initializers/spree.rb` as it's no longer used.
 
 ## Read the release notes
 
