--- a/docs/developer/upgrades/3.4-to-3.5.mdx
+++ b/docs/developer/upgrades/3.4-to-3.5.mdx
@@ -5,15 +5,11 @@ order: 5
 description: 'This guide covers upgrading a 3.4 Spree store, to a 3.5 store.'
 ---
 
-### Update Gemfile
+### Update gems
 
-```ruby
-gem 'spree', '~> 3.5'
-gem 'spree_auth_devise', '~> 3.3'
-gem 'spree_gateway', '~> 3.3'
+```bash
+bundle update
 ```
-
-### Run `bundle update`
 
 ### Install missing migrations
 
@@ -33,27 +29,16 @@ If you were previously using Analytics Trackers feature you need to install it a
 
 1. Add [Spree Analytics Trackers](https://github.com/spree-contrib/spree_analytics_trackers) to your `Gemfile`:
 
-```ruby
-gem 'spree_analytics_trackers', github: 'spree-contrib/spree_analytics_trackers'
-```
-
-1. Install the gem using Bundler:
-
 ```bash
-bundle install
+bundle add spree_analytics_trackers
 ```
 
-1. Copy and run migrations:
+2. Copy and run migrations:
 
 ```bash
 bundle exec rails g spree_analytics_trackers:install
 ```
 
-You're good to go!
-
 ## Read the release notes
 
 For information about changes contained within this release, please read the [3.5.0 Release Notes](https://github.com/spree/spree/releases/tag/v3.5.0).
-
-
-
