--- a/docs/developer/upgrades/3.5-to-3.6.mdx
+++ b/docs/developer/upgrades/3.5-to-3.6.mdx
@@ -5,21 +5,17 @@ order: 4
 description: 'This guide covers upgrading a 3.5 Spree application, to a 3.6 application.'
 ---
 
-### Update Gemfile
+## Update your Rails version to 5.2
 
-```ruby
-gem 'spree', '~> 3.6'
-gem 'spree_auth_devise', '~> 3.3'
-gem 'spree_gateway', '~> 3.3'
+Spree 3.6 requires Rails 5.2 at a minimum. Please follow the [official Rails guide](http://guides.rubyonrails.org/5_2_release_notes.html#upgrading-to-rails-5-2) to upgrade your application.
+
+## Update gems
+
+```bash
+bundle update
 ```
 
-### Update your Rails version to 5.2
-
-Please follow the [official Rails guide](http://guides.rubyonrails.org/5_2_release_notes.html#upgrading-to-rails-5-2) to upgrade your store.
-
-### Run `bundle update`
-
-### Migrate to ActiveStorage \(optional\)
+### (Optional) Migrate to ActiveStorage (optional)
 
 Please follow the [official paperclip guide](https://github.com/thoughtbot/paperclip/blob/master/MIGRATING) if you want to use ActiveStorage instead of paperclip.
 
