--- a/docs/developer/upgrades/4.2-to-4.3.mdx
+++ b/docs/developer/upgrades/4.2-to-4.3.mdx
@@ -16,17 +16,28 @@ If you're on an older version than 4.1 please follow previous upgrade guides and
 
 ## Update Gemfile
 
-```ruby
-gem 'spree', '>= 4.3'
+Since Spree 4.3 `spree` gem doesn't include `spree_emails`, `spree_backend` and `spree_frontend` gems. It only consists of Spree Core and Spree API.
+
+You need to add them to your Gemfile if you want to use them.
+
+```bash
+bundle add spree_emails spree_backend spree_frontend
 ```
 
 ## Remove gems merged into Spree Core
+
+These gems were merged into Spree Core in version 4.3. All of their functionality is now included in the `spree` gem so you can remove them.
 
 ### \(Optional\) Remove SpreeMultiDomain
 
 If you used that gem in the past you need to remove it. Multi-Store is now incorporated into Spree core and you cannot use that gem anymore.
 
 1. Remove `spree_multi_domain` from your `Gemfile`
+
+    ```bash
+    bundle remove spree_multi_domain
+    ```
+
 2. Remove `//= require spree/frontend/spree_multi_domain` from `vendor/assets/javascripts/spree/frontend/all.js`
 3. Remove `//= require spree/backend/spree_multi_domain` from `vendor/assets/javascripts/spree/backend/all.js`
 
@@ -34,47 +45,16 @@ If you used that gem in the past you need to remove it. Multi-Store is now incor
 
 Spree 4.3 includes TinyMCE 5 editor built-in. It's not recommended to use `spree_editor` gem anymore.
 
+```bash
+bundle remove spree_editor
+```
+
 ### \(Optional\) Remove Spree Static Content
 
 Spree 4.3 includes a built-in CMS. It's not recommended to use `spree_static_content`
 
-## Add Spree modules
-
-Spree 4.3 was split into separate modules which aren't included in the `spree` package anymore.
-
-### \(Optional\) Add `spree_frontend` gem
-
-If you use the default Spree Storefront you need to add it to your `Gemfile`. 
-
-Note: If you are using `spree_auth_devise`, make sure `spree_frontend` precedes it in your Gemfile.
-
-```ruby
-gem 'spree_frontend', '>= 4.3'
-```
-
-### \(Optional\) Add `spree_backend` gem
-
-If you use the default Spree Admin Panel you need to add it to your `Gemfile`. Make sure it comes before `spree_auth_devise`.
-
-Note: If you are using `spree_auth_devise`, make sure `spree_backend` precedes it in your Gemfile.
-
-
-```ruby
-gem 'spree_backend', '>= 4.3'
-```
-
-### \(Optional\) Add `spree_emails` gem
-
-Transactional emails once part of `spree_core` were extracted into their own gem called `spree_emails`. If you would like to still use this feature you'll need to include this new gem in your `Gemfile`.
-
-```ruby
-gem 'spree_emails', '>= 4.3'
-```
-
-## Update gems
-
 ```bash
-bundle update
+bundle remove spree_static_content
 ```
 
 ## Install missing migrations
@@ -93,7 +73,7 @@ bin/rails db:migrate
 
 ### Upgrade Sprockets to v4
 
-In your project create  `app/assets/config/manifest.jss` file with contents: 
+In your project create  `app/assets/config/manifest.jss` file with contents:
 
 ```ruby
 //= link_tree ../images
@@ -101,41 +81,22 @@ In your project create  `app/assets/config/manifest.jss` file with contents:
 //= link_directory ../stylesheets .css
 ```
 
-More [on this topic](https://github.com/rails/sprockets/blob/master/UPGRADING#manifestjs).
-
-### Update Spree Auth Devise and Spree Gateway
-
-```bash
-bundle update spree_gateway spree_auth_devise
-```
+More [on this topic](https://github.com/rails/sprockets/blob/main/UPGRADING.md#manifestjs).
 
 ### Admin Panel fix
 
-If you've developed custom features for your Admin Panel, please replace
+If you've developed custom features for your Admin Panel, please replace any occurrences of
 
 ```ruby
 render partial: 'spree/shared/error_messages'
 ```
 
-with
+to
 
 ```ruby
 render partial: 'spree/admin/shared/error_messages'
 ```
 
-## Upgrade all of your Spree extensions to the newest versions
-
-To avoid errors and compatibility issues, please update all of your Spree extension gems to the newest versions which usually include fixes for the new Spree release, eg.
-
-```bash
-bundle update spree_related_products
-```
-
 ## Read the release notes
 
 For information about changes contained within this release, please read the [Release notes](https://github.com/spree/spree/releases/v4.3.0).
-
-## More info
-
-If you have any questions or suggestions feel free to [contact us via email](https://spreecommerce.org/contact) or through [Spree slack channels](http://slack.spreecommerce.org/)
-
