--- a/docs/developer/upgrades/quickstart.mdx
+++ b/docs/developer/upgrades/quickstart.mdx
@@ -31,7 +31,7 @@ New features, will likely contain API changes. The difference between Spree mino
 
 ## Security
 
-Our Security policy is [described here](https://docs.spreecommerce.org/security).
+Our Security policy is [described here](/developer/security).
 
 When a release series is no longer supported, it's your own responsibility to deal with bugs and security issues. We may provide backports of some critical security fixes.
 
